--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "daisyui": "^2.33.0",
     "next": "^13.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-visibility-sensor": "^5.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
