--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "theme-change": "^2.2.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
