--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@next/font": "^13.0.0",
+    "clsx": "^1.2.1",
     "daisyui": "^2.33.0",
     "next": "^13.0.0",
     "react": "^18.2.0",
